--- a/index.html
+++ b/index.html
@@ -6,51 +6,51 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
     <body>
-        <div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
+        <div id="app">
+            <img src="./assets/fish-flag.png" id="fishflag-1">
+            <img src="./assets/map.png" id="map-1">
+            <img src="./assets/vase-vertical-short.png" id="vase-short">
+            <img src="./assets/vase-vertical-tall.png" id="vase-tall">
+            <img src="./assets/bamboo-big.png" id="bamboo-1">
+            <img src="./assets/quadropus.png" id="quad-1">
+            <img src="./assets/monster.png" id="monster-1">
+            <img src="./assets/flag-rectangle.png" id="flag-1">
+            <img src="./assets/dolls-rectangle.png" id="dolls-1">
+            <img src="./assets/gate-wide.png" id="gate-1">
+            <img src="./assets/sushi-wide.png" id="sushi-1">
+            <img src="./assets/sunrise-vertical.png" id="sunrise-1">
+            <img src="./assets/lantern-short.png" id="lantern-1">
+            <img src="./assets/flag-square.png" id="flag-2">
+            <img src="./assets/painting.png" id="paint">
+            <img src="./assets/masks-wide.png" id="mask-1">
+            <img src="./assets/sushi-extra-wide.png" id="sushi-2">
+            <img src="./assets/masks.png" id="mask-2">
+            <img src="./assets/wave-horizontal.png" id="wave-1">
+            <img src="./assets/kimono-1.png" id="firstkimono">
+            <img src="./assets/fish-flag-wide.png" id="fishflag-2">
+            <img src="./assets/monster-wide.png" id="monster-2">
+            <img src="./assets/vase-horizontal.png" id="vase-3">
+            <img src="./assets/horn-horizontal.png" id="horn-1">
+            <img src="./assets/dolls-square.png" id="dolls-2">
+            <img src="./assets/lanterns-three.png" id="lantern-2">
+            <img src="./assets/sake.png" id="drink-1">
+            <img src="./assets/sushi.png" id="sushi-3">
+            <img src="./assets/pagoda-big.png" id="pagoda-1">
+            <img src="./assets/wave-vertical.png" id="wave-2">
+            <img src="./assets/quadropi-five.png" id="quad-2">
+            <img src="./assets/horn-vertical.png" id="horn-2">
+            <img src="./assets/pagoda.png" id="pagoda-2">
+            <img src="./assets/bamboo.png" id="bamboo-2">
+            <img src="./assets/cell-tower.png" id="tower">
+            <img src="./assets/map.png" id="map-1">
+            <img src="./assets/map.png" id="map-1">
+            <img src="./assets/map.png" id="map-1">
+            <img src="./assets/map.png" id="map-1">
+            <img src="./assets/map.png" id="map-1">
+            <img src="./assets/map.png" id="map-1">
+            <img src="./assets/map.png" id="map-1">
+            <img src="./assets/map.png" id="map-1">
+            <img src="./assets/map.png" id="map-1">
         </div>
         
     </body>
