connected stylesheet to html

--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Project for Colin</title>
+        <title>Big Grid</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link href="./style.css" rel="stylesheet" type="text/css">
     </head>
     <body>
         <div id="app">
@@ -42,15 +43,15 @@
             <img src="./assets/pagoda.png" id="pagoda-2">
             <img src="./assets/bamboo.png" id="bamboo-2">
             <img src="./assets/cell-tower.png" id="tower">
-            <img src="./assets/map.png" id="map-1">
-            <img src="./assets/map.png" id="map-1">
-            <img src="./assets/map.png" id="map-1">
-            <img src="./assets/map.png" id="map-1">
-            <img src="./assets/map.png" id="map-1">
-            <img src="./assets/map.png" id="map-1">
-            <img src="./assets/map.png" id="map-1">
-            <img src="./assets/map.png" id="map-1">
-            <img src="./assets/map.png" id="map-1">
+            <img src="./assets/kimono-2.png" id="secondkimono">
+            <img src="./assets/writing-horizontal.png" id="writing-1">
+            <img src="./assets/sunrise-horizontal.png" id="sunrise-2">
+            <img src="./assets/map-wide.png" id="map-2">
+            <img src="./assets/gate-wide.png" id="gate-2">
+            <img src="./assets/writing-vertical.png" id="writing-2">
+            <img src="./assets/lantern-tall.png" id="lantern-3">
+            <img src="./assets/sake-wide.png" id="sake-2">
+            <img src="./assets/volcano.png" id="erupt">
         </div>
         
     </body>
